# bash-ini-parser

./: .gitignore  .gitmodules  .travis.yml  Makefile.am  README.md  bash-ini-parser  configure.ac
build-aux/: test-driver
scripts/: example.sh  file.ini  getkeyfromsection.sh
t/: .simplecov  Makefile  Makefile.am  README.md  setup.sh  t0000-test-setup.sh  t0001-parse.sh  t0001-whitespace.sh  t0002-invalid.sh  t0003-sections.sh  t0004-comments.sh  t0005-invalid-chars.sh  t0005-new_var.sh  t0006-duplication.sh  t0007-unwanted_file.sh  t0008-array.sh  t0009-executable.sh
t/t0001/: test1.ini  test1.out.correct  whitespace.ini  whitespace.out.correct
t/t0003/: sections.ini  sections.out.correct
t/t0004/: comments.ini  comments.out.correct
t/t0005/: invalid.ini  invalid.out.correct  var.ini  var.out.correct
t/t0006/: duplication.ini  duplication.out.correct
t/t0008/: array.ini
t/t0009/: exec.ini
test/: testfile.sh
